--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DATABASE_URL_bakery = mongodb+srv://ibrahim:481997@cluster0.te5af.mongodb.net/ba
 Admins_JWT_SECRET = asdasdasdasdfadsfsdfadsf
 Users_JWT_SECRET = asdasdasdasdfadsfsdfadsf
 balady_mongo = mongodb+srv://ibrahim:481997@cluster0.rfqgn.mongodb.net/baladyBakery?retryWrites=true&w=majority
-http://madina-bakery.com
+REACT_APP_API_URL = /api
