--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DATABASE_URL = mongodb://localhost:27017/el-madina
+DATABASE_URL_local = mongodb://localhost:27017/el-madina
 DATABASE_URL_atlas = mongodb+srv://ibrahim:481997@cluster0.lyvgk.mongodb.net/bakeryTest?retryWrites=true&w=majority
 DATABASE_URL_bakery = mongodb+srv://ibrahim:481997@cluster0.te5af.mongodb.net/bakery?retryWrites=true&w=majority
 Admins_JWT_SECRET = asdasdasdasdfadsfsdfadsf
 Users_JWT_SECRET = asdasdasdasdfadsfsdfadsf
-balady_mongo = mongodb+srv://ibrahim:481997@cluster0.rfqgn.mongodb.net/baladyBakery?retryWrites=true&w=majority
+DATABASE_URL = mongodb+srv://ibrahim:481997@cluster0.rfqgn.mongodb.net/baladyBakery?retryWrites=true&w=majority
 REACT_APP_API_URL = /api
