set number for user madina

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_URL_Local = mongodb://localhost:27017/el-madina
 DATABASE_URL_atlas = mongodb+srv://ibrahim:481997@cluster0.lyvgk.mongodb.net/bakeryTest?retryWrites=true&w=majority
-madina_DATABASE_URL = mongodb+srv://ibrahim:481997@cluster0.te5af.mongodb.net/bakery?retryWrites=true&w=majority
+DATABASE_URL = mongodb+srv://ibrahim:481997@cluster0.te5af.mongodb.net/bakery?retryWrites=true&w=majority
 Admins_JWT_SECRET = asdasdasdasdfadsfsdfadsf
 Users_JWT_SECRET = asdasdasdasdfadsfsdfadsf
-DATABASE_URL = mongodb+srv://ibrahim:481997@cluster0.rfqgn.mongodb.net/baladyBakery?retryWrites=true&w=majority
+baladi_DATABASE_URL = mongodb+srv://ibrahim:481997@cluster0.rfqgn.mongodb.net/baladyBakery?retryWrites=true&w=majority
 REACT_APP_API_URL = /api
